--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,77 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+
+html,body{
+    margin: 0;
+    padding: 0;
+
+    background-color: #f1f1f1;
+    scroll-behavior: smooth;
+}
+@font-face {
+    font-family: 'Neue';
+    src: url('/font/NeueMontreal-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.font-Neue {
+    font-family: 'Neue', sans-serif;
+}
+
+@font-face {
+    font-family: 'FoundersGrotesk';
+    src: url('/font/FoundersGrotesk-Semibold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+
+.font-FoundersGrotesk {
+    font-family: 'FoundersGrotesk', sans-serif;
+
+}
+
+@font-face {
+    font-family: 'icon';
+    src: url('/font/icomoon.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.font-icon {
+    font-family: 'icon', sans-serif;
+}
+
+button.group {
+    position: relative;
+}
+
+button.group::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-color: black;
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 0.4s ease;
+    z-index: 0;
+}
+
+button.group:hover::before {
+    transform: scaleX(1);
+}
+
+button.group span {
+    position: relative;
+    z-index: 1;
 }
