--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,22 @@
     scrollbar-width: none;
 }
 
+.card {
+    box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05); /* shadow-lg */
+    border-radius: 0.5rem; /* rounded-lg */
+    background-color: transparent; /* bg-white */
+    padding: 2rem; /* p-8 */
+    transition: box-shadow 0.3s ease;
+    cursor: pointer;
+    color: #333; /* text-gray-700 */
+    text-decoration: none;
+    overflow: auto;
+    max-width: 800px;
+    max-height: 600px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    white-space: pre-wrap;
+}
 
 html,body{
     margin: 0;
@@ -75,3 +91,5 @@ button.group span {
     position: relative;
     z-index: 1;
 }
+
+
